--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -2,7 +2,9 @@ name: Deploy Website
 description: Deploy the Next.js website to S3 and invalidate CloudFront cache
 
 on:
-  workflow_dispatch: # allow manual trigger
+  push:
+    branches:
+      - main
 
 jobs:
   deploy:
@@ -16,14 +18,18 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18
+          cache: 'pnpm'
+
+      - name: Install pnpm
+        run: npm install -g pnpm
 
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
-      - name: Build Next.js and export static site
+      - name: Build and export Next.js
         run: |
-          npm run build
-          npm run export
+          pnpm build
+          pnpm export
 
       - name: Sync to S3
         run: aws s3 sync ./out s3://popvillion-website --delete
