WIP: AWS Integration and Deployment

--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -2,9 +2,7 @@ name: Deploy Website
 description: Deploy the Next.js website to S3 and invalidate CloudFront cache
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
 
 jobs:
   deploy:
