--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -31,7 +31,7 @@ jobs:
           pnpm build
 
       - name: Sync to S3
-        run: aws s3 sync ./out s3://popvillion-website --delete
+        run: aws s3 sync ./packages/web/out s3://popvillion-website --delete
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
