--- a/package.json
+++ b/package.json
@@ -1,39 +1,13 @@
 {
-  "name": "popvillion",
-  "version": "0.1.0",
   "private": true,
+  "name": "popvillion",
+  "version": "1.0.0",
+  "description": "e-commerce platform for my husband's funko pop collections",
+  "packageManager": "pnpm@9.0.0",
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
-    "start": "next start",
-    "lint": "eslint"
-  },
-  "dependencies": {
-    "@emotion/cache": "^11.14.0",
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.1",
-    "@mui/icons-material": "^7.3.2",
-    "@mui/material": "^7.3.2",
-    "next": "15.5.3",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "tailwind-merge": "^3.3.1"
+    "build": "turbo run build"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@next/eslint-plugin-next": "^15.5.3",
-    "@tailwindcss/postcss": "^4.1.13",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.3",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-unused-imports": "^4.2.0",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.13",
-    "typescript": "^5",
-    "typescript-eslint": "^8.44.0"
+    "turbo": "^2.5.6"
   }
 }
