--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "e-commerce platform for my husband's funko pop collections",
   "packageManager": "pnpm@9.0.0",
   "scripts": {
-    "build": "turbo run build"
+    "build": "turbo run build",
+    "dev": "turbo run dev"
   },
   "devDependencies": {
     "turbo": "^2.5.6"
