--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
   "packageManager": "pnpm@9.0.0",
   "scripts": {
     "build": "turbo run build",
-    "dev": "turbo run dev"
+    "dev": "turbo run dev",
+    "sst": "sst"
   },
   "devDependencies": {
+    "@types/aws-lambda": "8.10.152",
     "turbo": "^2.5.6"
+  },
+  "dependencies": {
+    "sst": "3.17.13"
   }
 }
