--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@types/aws-lambda": "8.10.152",
+    "sst": "3.17.13",
     "turbo": "^2.5.6"
   },
   "dependencies": {
