--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "private": true,
+  "type": "module",
   "name": "popvillion",
   "version": "1.0.0",
   "description": "e-commerce platform for my husband's funko pop collections",
@@ -13,8 +14,5 @@
     "@types/aws-lambda": "8.10.152",
     "sst": "3.17.13",
     "turbo": "^2.5.6"
-  },
-  "dependencies": {
-    "sst": "3.17.13"
   }
 }
