--- a/package.json
+++ b/package.json
@@ -6,15 +6,10 @@
   "packageManager": "pnpm@9.0.0",
   "scripts": {
     "build": "turbo run build",
-    "dev": "turbo run dev",
-    "sst": "sst"
+    "dev": "turbo run dev"
   },
   "devDependencies": {
     "@types/aws-lambda": "8.10.152",
-    "sst": "3.17.13",
     "turbo": "^2.5.6"
-  },
-  "dependencies": {
-    "sst": "3.17.13"
   }
 }
