--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -23,6 +23,7 @@
       "@utils/*": ["./src/utils/*"],
       "@providers/*": ["./src/providers/*"],
       "@hooks/*": ["./src/hooks/*"],
+      "@styles/*": ["./src/styles/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
