--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -30,6 +30,13 @@ jobs:
         run: |
           pnpm build
 
+      - name: Deploy to AWS Lambda
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ap-southeast-1
+        run: pnpm serverless deploy --stage prod
+
       - name: Sync to S3
         run: aws s3 sync ./packages/web/out s3://popvillion-website --delete
         env:
