--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@popvillion/api",
   "version": "1.0.0",
-  "description": "",
+  "private": true,
   "scripts": {
     "offline": "serverless offline",
-    "deploy": "serverless deploy",
-    "dev": "nodemon --watch src --ext ts,js --exec 'ts-node src/server.ts'"
+    "deploy": "pnpm serverless deploy --stage dev",
+    "dev": "nodemon --watch src --ext ts,js --exec 'ts-node src/server.ts'",
+    "check-types": "tsc --noEmit"
   },
   "dependencies": {
     "@pothos/core": "^4.9.1",
