--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "offline": "serverless offline",
-    "deploy": "pnpm serverless deploy --stage dev",
+    "deploy:dev": "serverless deploy --stage dev",
+    "deploy:prod": "serverless deploy --stage prod",
     "dev": "nodemon --watch src --ext ts,js --exec 'ts-node src/server.ts'",
     "check-types": "tsc --noEmit"
   },
