--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -30,13 +30,15 @@ jobs:
         run: |
           pnpm build
 
+      - name: Install Serverless CLI
+        run: pnpm add -g serverless
+
       - name: Deploy to AWS Lambda
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ap-southeast-1
-        run: pnpm i -g serverless
-             turbo run deploy:prod --filter=@popvillion/api
+        run: turbo run deploy:prod --filter=@popvillion/api
 
       - name: Sync to S3
         run: aws s3 sync ./packages/web/out s3://popvillion-website --delete
