--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint": "eslint",
     "check-types": "tsc --noEmit",
-    "analyze": "next analyze"
+    "analyze": "next analyze",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@emotion/cache": "^11.14.0",
@@ -19,6 +21,7 @@
     "@mui/material-nextjs": "^7.3.2",
     "@next/bundle-analyzer": "^15.5.3",
     "@tailwindcss/postcss": "^4.1.13",
+    "@vis.gl/react-google-maps": "^1.5.5",
     "next": "15.5.3",
     "postcss": "^8.5.6",
     "react": "19.1.0",
@@ -29,6 +32,10 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@next/eslint-plugin-next": "^15.5.3",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -37,6 +44,9 @@
     "eslint-config-next": "15.5.3",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-unused-imports": "^4.2.0",
+    "jest": "^30.1.3",
+    "jest-environment-jsdom": "^30.1.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5",
     "typescript-eslint": "^8.44.0"
   }
