--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -7,21 +7,32 @@
     "deploy:dev": "serverless deploy --stage dev",
     "deploy:prod": "serverless deploy --stage prod",
     "dev": "nodemon --watch src --ext ts,js --exec 'ts-node src/server.ts'",
-    "check-types": "tsc --noEmit"
+    "check-types": "tsc --noEmit",
+    "db:generate": "drizzle-kit generate",
+    "db:push": "drizzle-kit push --strict --verbose",
+    "db:migrate": "drizzle-kit migrate",
+    "db:rollback": "drizzle-kit rollback",
+    "db:seed": "drizzle-kit seed"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.1",
     "@pothos/core": "^4.9.1",
     "aws-lambda": "^1.0.7",
+    "drizzle-orm": "^0.44.5",
     "graphql": "^16.11.0",
-    "graphql-yoga": "^5.16.0"
+    "graphql-yoga": "^5.16.0",
+    "uuid": "^13.0.0",
+    "v4": "^0.0.1"
   },
   "devDependencies": {
     "@types/aws-lambda": "8.10.152",
-    "@types/node": "^20",
+    "@types/node": "^20.19.17",
+    "drizzle-kit": "^0.31.4",
     "nodemon": "^3.1.10",
     "serverless": "^4.19.1",
     "serverless-offline": "^14.4.0",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.5",
     "typescript": "^5"
   }
 }
