--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -7,6 +7,7 @@
     "outDir": "dist",
     "rootDir": "src",
     "moduleResolution": "node",
+    "types": ["node"],        
     "resolveJsonModule": true
   },
   "include": ["src"]
