graphql codegen and integration

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -12,12 +12,16 @@
     "db:push": "drizzle-kit push --strict --verbose",
     "db:migrate": "drizzle-kit migrate",
     "db:rollback": "drizzle-kit rollback",
-    "db:seed": "drizzle-kit seed"
+    "db:seed": "tsx src/seed/index.ts",
+    "schema:dump": "tsx src/scripts/dump-schema.ts",
+    "codegen": "graphql-codegen --config codegen.ts",
+    "generate": "pnpm schema:dump && pnpm codegen"
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.1",
     "@pothos/core": "^4.9.1",
     "aws-lambda": "^1.0.7",
+    "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
     "graphql": "^16.11.0",
     "graphql-yoga": "^5.16.0",
@@ -25,9 +29,21 @@
     "v4": "^0.0.1"
   },
   "devDependencies": {
+    "@eddeee888/gcg-operation-location-migration": "^0.1.0",
+    "@graphql-cli/codegen": "3.0.4",
+    "@graphql-cli/coverage": "2.1.0",
+    "@graphql-cli/diff": "2.1.0",
+    "@graphql-cli/similar": "2.1.0",
+    "@graphql-cli/validate": "2.1.0",
+    "@graphql-codegen/cli": "^6.0.0",
+    "@graphql-codegen/typescript": "^5.0.0",
+    "@graphql-codegen/typescript-operations": "^5.0.0",
+    "@graphql-codegen/typescript-react-apollo": "4.3.3",
+    "@graphql-codegen/typescript-resolvers": "^5.0.0",
     "@types/aws-lambda": "8.10.152",
     "@types/node": "^20.19.17",
     "drizzle-kit": "^0.31.4",
+    "graphql-cli": "4.1.0",
     "nodemon": "^3.1.10",
     "serverless": "^4.19.1",
     "serverless-offline": "^14.4.0",
