--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -13,6 +13,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@apollo/client": "^3.14.0",
     "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
@@ -22,6 +23,7 @@
     "@next/bundle-analyzer": "^15.5.3",
     "@tailwindcss/postcss": "^4.1.13",
     "@vis.gl/react-google-maps": "^1.5.5",
+    "graphql": "^16.11.0",
     "next": "15.5.3",
     "postcss": "^8.5.6",
     "react": "19.1.0",
