--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -24,6 +24,7 @@
       "@providers/*": ["./src/providers/*"],
       "@hooks/*": ["./src/hooks/*"],
       "@styles/*": ["./src/styles/*"],
+      "@generated/*": ["./src/generated/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
