--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -26,10 +26,6 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Build Next.js
-        run: |
-          pnpm build
-
       - name: Install Serverless CLI
         run: pnpm add -g serverless
 
@@ -45,6 +41,12 @@ jobs:
           ENDPOINT=$(echo "$DEPLOY_OUTPUT" | grep "POST -" | awk '{print $3}')
           echo "NEXT_PUBLIC_GRAPHQL_ENDPOINT=$ENDPOINT" >> $GITHUB_ENV
 
+      - name: Build Next.js
+        env: 
+          NEXT_PUBLIC_GRAPHQL_ENDPOINT: ${{ env.NEXT_PUBLIC_GRAPHQL_ENDPOINT }}
+        run: |
+          pnpm build
+
       - name: Sync to S3
         run: aws s3 sync ./packages/web/out s3://popvillion-website --delete
         env:
@@ -58,4 +60,3 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ap-southeast-1
-          NEXT_PUBLIC_GRAPHQL_ENDPOINT: ${{ env.NEXT_PUBLIC_GRAPHQL_ENDPOINT }}
