--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "offline": "serverless offline",
+    "dev": "serverless offline",
     "deploy:dev": "serverless deploy --stage dev",
     "deploy:prod": "serverless deploy --stage prod",
-    "dev": "nodemon --watch src --ext ts,js --exec 'ts-node -r tsconfig-paths/register src/server.ts'",
+    "local": "nodemon --watch src --ext ts,js --exec 'ts-node -r tsconfig-paths/register src/server.ts'",
     "check-types": "tsc --noEmit --incremental",
     "db:generate": "drizzle-kit generate",
     "db:push": "drizzle-kit push --strict --verbose",
