--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -54,9 +54,10 @@ jobs:
             echo "NEXT_PUBLIC_GRAPHQL_ENDPOINT=$ENDPOINT" >> $GITHUB_ENV
 
       - name: Build Next.js
+        env: 
+          NEXT_PUBLIC_GRAPHQL_ENDPOINT: ${{ env.NEXT_PUBLIC_GRAPHQL_ENDPOINT }}
         run: |
-          echo "Using endpoint: $NEXT_PUBLIC_GRAPHQL_ENDPOINT"
-          NEXT_PUBLIC_GRAPHQL_ENDPOINT=$NEXT_PUBLIC_GRAPHQL_ENDPOINT pnpm build
+          pnpm build
 
       - name: Sync to S3
         run: aws s3 sync ./packages/web/out s3://popvillion-website --delete
