--- a/packages/api/serverless.yml
+++ b/packages/api/serverless.yml
@@ -14,6 +14,9 @@ functions:
       - http:
           path: graphql
           method: post
+      - http:
+          path: graphql
+          method: get
 
 plugins:
   - serverless-offline
