--- a/turbo.json
+++ b/turbo.json
@@ -1,5 +1,6 @@
 {
   "$schema": "https://turborepo.com/schema.json",
+  "globalEnv": ["DATABASE_URL", "NEXT_PUBLIC_GRAPHQL_ENDPOINT"],
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
