--- a/packages/api/serverless.yml
+++ b/packages/api/serverless.yml
@@ -6,6 +6,9 @@ provider:
   name: aws
   runtime: nodejs20.x
   region: ap-southeast-1
+  environment:
+    DATABASE_URL: ${env:DATABASE_URL}
+
 
 functions:
   graphql:
