--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://turborepo.com/schema.json",
-  "globalEnv": ["DATABASE_URL", "NEXT_PUBLIC_GRAPHQL_ENDPOINT"],
+  "globalEnv": ["WEB_URL", "DATABASE_URL", "GRAPHQL_URL"],
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
