--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -41,6 +41,13 @@ jobs:
         run: |
           pnpm run deploy:prod
 
+      - name: Invalidate GraphQL CloudFront cache
+        run: aws cloudfront create-invalidation --distribution-id ${{ secrets.GRAPHQL_CLOUDFRONT_DIST_ID }} --paths "/*"
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ap-southeast-1
+
       - name: Build Next.js
         env:
           NEXT_PUBLIC_GRAPHQL_ENDPOINT: ${{ secrets.GRAPHQL_URL }}
